add appAgents.create_app_agent
